# pqdb

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  package-lock.json  package.json  prd.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_developers_table.py  002_create_projects_table.py  003_create_api_keys_table.py  004_add_database_name_to_projects.py  005_add_developer_oauth.py  006_create_developer_credentials.py  007_add_wrapped_encryption_key.py  008_add_permissions_to_api_keys.py  009_add_name_to_api_keys.py  010_create_database_branches_table.py  011_add_ml_kem_public_key_to_developers.py
backend/src/pqdb_api/: __init__.py  _cli.py  app.py  config.py  database.py  logging.py
backend/tests/e2e/: conftest.py  test_full_roundtrip.py
backend/tests/integration/: conftest.py  test_api_keys.py  test_audit_logs.py  test_auth.py  test_auth_public_key.py  test_auth_settings.py  test_backups.py  test_branches.py  test_catalog_wrappers.py  test_change_password.py  test_crud.py  test_db_webhooks.py  test_developer_oauth.py  test_email_verification.py  test_github_oauth.py  test_google_oauth_flow.py  test_health.py  test_indexes.py  test_introspection.py  test_magic_link.py  test_mcp_endpoints.py  test_mfa.py  test_migrations.py  test_ml_kem_public_key_column.py  test_oauth_providers.py  test_owner_rls.py  test_passkeys.py  test_password_reset.py  test_pause_enforcement.py  test_performance_advisor.py  test_pg_introspection.py  test_projects.py  test_rate_limit_middleware.py  test_rate_limits.py  test_realtime_rls.py  test_realtime_triggers.py  test_realtime_ws.py  test_reindex.py  test_replication.py  test_request_routing.py  (+15 more)
backend/tests/unit/: test_api_key_middleware.py  test_api_key_model.py  test_api_key_service.py  test_app.py  test_audit_log.py  test_auth_engine.py  test_auth_rate_limits.py  test_auth_service.py  test_branch_model.py  test_config.py  (+48 more)
(+397 files in other folders)
